fixed overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@
 
 body {
   background: $primary-color;
+  overflow: hidden;
   width: 100%;
   min-height: 100%;
 }
